Fix: events table sizing on small mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,11 +164,14 @@ h2 {
 } */
 
 /* Media queries */
-@media only screen and (max-width: 480px) {
-    /* horizontal scrollbar for tables if mobile screen */
-    .tablemobile {
-        overflow-x: auto;
-        display: block;
+/* Small screens and up */
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is large enough */
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
     }
 }
 /* Medium devices (tablets, 768px and up) */
